PJKT-53: Update sonar-project.properties

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,7 +1,12 @@
 sonar.projectKey=StudentsDreamTeam_BestInQuest-Web
 sonar.organization=studentsdreamteam
 sonar.sources=src
-# sonar.javascript.lcov.reportPaths=coverage/lcov.info
 
+# Путь к отчёту о покрытии
+# sonar.javascript.lcov.reportPaths=coverage/lcov.info
 # Удаление папок из проверки
 # sonar.exclusions=**/__mocks__/**, **/public/**
+
+# Динамические параметры
+sonar.branch.name=${env.SONAR_BRANCH_NAME}
+sonar.analysis.mode=${env.SONAR_ANALYSIS_MODE}
