--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -29,13 +29,12 @@ jobs:
         uses: SonarSource/sonarqube-scan-action@v5.0.0
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          SONAR_ORGANIZATION: studentsdreamteam
+          SONAR_PROJECT_KEY: StudentsDreamTeam_BestInQuest-Web
         with:
           args: |
-            -Dsonar.organization=studentsdreamteam
-            -Dsonar.projectKey=StudentsDreamTeam_BestInQuest-Web
             -Dsonar.sources=src
             -Dsonar.exclusions=**/__mocks__/**,**/public/**
-            -Dsonar.qualitygate.wait=true
             ${{ github.ref_name != 'main' && '-Dsonar.branch.name=' || '' }}${{ github.ref_name }}
 
   deploy:
