--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -57,7 +57,7 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./dist
-          target_branch: gh-pages
+          publish_branch: gh-pages
           destination_dir: ''
 
       # Деплой develop -> стейдж (username.github.io/repo/dev)
@@ -67,5 +67,5 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./dist
-          target_branch: gh-pages
+          publish_branch: gh-pages
           destination_dir: 'dev'  # Отдельная папка для develop
