--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "dev": "vite --host 0.0.0.0",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest",
+    "test:ci": "vitest run --coverage --reporter=dot --reporter=junit --outputFile=coverage/test-report.xml",
+    "test:ui": "vitest --ui"
   },
   "dependencies": {
     "react": "^19.0.0",
@@ -24,6 +27,11 @@
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
-    "vite": "^6.2.0"
+    "vite": "^6.2.0",
+    "@testing-library/react": "^15.0.0",
+    "@testing-library/jest-dom": "^6.4.2",
+    "@vitest/coverage-istanbul": "^1.6.0",
+    "jsdom": "^24.0.0",
+    "vitest": "^1.6.0"
   }
 }
