--- a/package.json
+++ b/package.json
@@ -28,9 +28,9 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
     "vite": "^6.2.0",
-    "@testing-library/react": "^15.0.0",
+    "@testing-library/react": "experimental",
     "@testing-library/jest-dom": "^6.4.2",
-    "@vitest/coverage-istanbul": "^1.6.0",
+    "@vitest/coverage-c8": "^1.6.0",
     "jsdom": "^24.0.0",
     "vitest": "^1.6.0"
   }
