--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Install dependencies
         run: |
           npm ci
-          npm install -D @vitest/coverage-c8 @testing-library/react@experimental --legacy-peer-deps
+          npm install -D @testing-library/react@16.0.0-beta.27 @testing-library/jest-dom@7.0.0
       
       - name: Run tests with coverage
         run: npm test -- --coverage
