--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -20,7 +20,8 @@ jobs:
       - name: Install dependencies
         run: |
           npm ci
-          npm install -D @testing-library/react@16.0.0-beta.27 @testing-library/jest-dom@7.0.0
+          npm install -D @testing-library/react@16.0.0-beta.27 @testing-library/jest-dom@6.4.2
+          npm install -D @vitest/coverage-c8@latest
       
       - name: Run tests with coverage
         run: npm test -- --coverage
