--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -20,7 +20,8 @@ jobs:
       
       - run: npm ci
       # - run: npm run lint
-      - run: npm run test
+      - run: npm run build
+      - run: npm run test:coverage
       
       - name: Cache SonarCloud
         uses: actions/cache@v3
@@ -39,7 +40,7 @@ jobs:
             -Dsonar.projectKey=StudentsDreamTeam_BestInQuest-Web
             -Dsonar.sources=src
             -Dsonar.exclusions=**/__mocks__/**,**/public/**
-            -Dsonar.javascript.lcov.reportPaths=coverage/lcov.info
+            -Dsonar.javascript.lcov.reportPaths=./coverage/lcov.info
             ${{ github.ref_name != 'main' && '-Dsonar.branch.name=' || '' }}${{ github.ref_name }}
           
           
