--- a/package.json
+++ b/package.json
@@ -20,18 +20,20 @@
   "devDependencies": {
     "@eslint/js": "^9.21.0",
     "@svgr/rollup": "^8.1.0",
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/react": "^15.0.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
+    "@vitest/coverage-istanbul": "^1.6.0",
     "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
-    "vite": "^6.2.0",
-    "@testing-library/react": "^15.0.0",
-    "@testing-library/jest-dom": "^6.4.2",
-    "@vitest/coverage-istanbul": "^1.6.0",
+    "jest-styled-components": "^7.2.0",
     "jsdom": "^24.0.0",
-    "vitest": "^1.6.0"
+    "vite": "^6.2.0",
+    "vitest": "^1.6.1"
   }
 }
