--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -22,6 +22,7 @@ jobs:
           rm -f package-lock.json  # Удаляем старый lock-файл
           npm install              # Генерируем новый
       - run: npm ci
+      - run: npm install -D @testing-library/jest-dom @testing-library/react @testing-library/user-event jsdom
       # - run: npm run lint
       - run: npm run build
       - run: npm run test:coverage
