--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -21,7 +21,7 @@ jobs:
       #   run: |
       #     rm -f package-lock.json  # Удаляем старый lock-файл
       #     npm install              # Генерируем новый
-      - run: npm ci
+      - run: npm ci --legacy-peer-deps
       - run: npm install -D @testing-library/jest-dom @testing-library/react @testing-library/user-event jsdom
       # - run: npm run lint
       - run: npm run build
