--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -19,7 +19,7 @@ jobs:
           cache: npm
       - run: npm ci --legacy-peer-deps
       - run: npm run build
-      - run: npm install -D @vitest/coverage-v8 --legacy-peer-deps
+      #- run: npm install -D @vitest/coverage-v8 --legacy-peer-deps
       - run: npm run test:ci
     
       
