--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -17,10 +17,12 @@ jobs:
         with:
           node-version: 20
           cache: npm
-      - run: npm ci --legacy-peer-deps
-      - run: npm run build
-      - name: Install dependencies
+      #- run: npm ci --legacy-peer-deps
+      #- run: npm run build
+      #- name: Install dependencies
+      - name: Clean install
         run: |
+          rm -rf node_modules package-lock.json
           npm install -D \
             vitest@1.6.1 \
             @vitest/coverage-v8@1.6.1 \
@@ -28,6 +30,7 @@ jobs:
             @testing-library/jest-dom@6.1.4 \
             @testing-library/user-event@14.5.2 \
             --legacy-peer-deps
+          npm install --package-lock-only
           npm ci
       #- run: npm install -D @vitest/coverage-v8 --legacy-peer-deps
       #- run: npm install -D vitest@1.6.1 @vitest/coverage-v8@1.6.1 @vitest/ui@1.6.1
