--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -54,6 +54,7 @@ jobs:
             -Dsonar.projectKey=StudentsDreamTeam_BestInQuest-Web
             -Dsonar.sources=src
             -Dsonar.exclusions=**/__mocks__/**,**/public/**
+            -Dsonar.testExecutionReportPaths=coverage/test-report.xml
             # -Dsonar.javascript.lcov.reportPaths=./coverage/lcov.info
             ${{ github.ref_name != 'main' && '-Dsonar.branch.name=' || '' }}${{ github.ref_name }}
           
