--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -55,7 +55,7 @@ jobs:
             -Dsonar.sources=src
             -Dsonar.exclusions=**/__mocks__/**,**/public/**
             -Dsonar.testExecutionReportPaths=coverage/test-report.xml
-            # -Dsonar.javascript.lcov.reportPaths=./coverage/lcov.info
+            -Dsonar.javascript.lcov.reportPaths=coverage/lcov.info
             ${{ github.ref_name != 'main' && '-Dsonar.branch.name=' || '' }}${{ github.ref_name }}
           
           
